gobmkida/c2/aftermath_genmove
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/aftermath_genmove/src/engine/aftermath.c:827:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[i * 2] != 3 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/aftermath_genmove/src/engine/aftermath.c:967:32: error: use of undeclared identifier 'byte_9B388C'
if ( v139 == ( unsigned __int8)byte_9B388C[v42] ) 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/aftermath_genmove/src/engine/aftermath.c:976:4: error: use of undeclared identifier 'byte_9B388D'
|| byte_9B388D[v42] != 3 && !v137[v42 + 21]) ) 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/aftermath_genmove/src/engine/aftermath.c:1353:28: error: use of undeclared identifier 'invalid_operation'
if ( !( ( v95 + v96 < 0) ^ __OFADD__( v95, v96) | ( v95 + v96 == 0)) ) 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/aftermath_genmove/src/engine/aftermath.c:370:25: note: expanded from macro '__OFADD__'
#define __OFADD__(x, y) invalid_operation // Generate overflow flag for (x+y)
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/aftermath_genmove/src/engine/aftermath.c:1553:18: error: use of undeclared identifier 'dword_9E8084'
safety = dragon2[dword_9E8084[v133 / 4]].safety; 
                 ^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/aftermath_genmove/src/obj/1/aftermath.o] Error 1
